# srcm-project

./: CHANGELOG.md  README.md  pyproject.toml
docs/: API_call.md
examples/: anim.py  diffusion_PDE.py  diffusion_bool.py  diffusion_prob.py  main.py  prod_deg_prob.py  two_species_toy.py
src/srcm/: __init__.py
src/srcm/api/: __init__.py  model.py  pde_model.py  simulation.py
src/srcm/cli/: inspect.py
src/srcm/hybrid_solver/: __init__.py  conversion.py  diffusion.py  domain.py  engine.py  gillespie.py  mass_calculations.py  pde.py  reactions.py  results.py  update_hybrid_state.py
src/srcm/pde_solver/: PDE_functional_form.py  __init__.py
src/srcm/results/: __init__.py  io.py
src/srcm/ssa_solver/: __init__.py  reaction.py  stochastic_sim.py
tests/test_hybrid/: test_PDE.py  test_conversion_params.py  test_decompose_reactions.py  test_diffusion.py  test_domain.py  test_engine.py  test_gillespie_loop.py  test_hybrid_state.py  test_mass_calculations.py  test_reactions.py
tests/test_io/: test_io.py
tests/test_ssa/: test_SSA_engine.py
