[project]
name = "srcm"
version = "0.1.0"
description = "Spatial simulation framework"
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]