[project]
name = "srcm"
version = "0.1.0"
description = "Spatial simulation framework"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy",
    "pandas>=2.3.3",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
